# Replica-Dataset

./: CMakeLists.txt
ReplicaSDK/: CMakeLists.txt
ReplicaSDK/include/: MirrorRenderer.h  MirrorSurface.h
ReplicaSDK/ptex/: EGL.cpp
ReplicaSDK/src/: render.cpp  viewer.cpp
